crates/noseyparker-cli/tests/scan/snippet_length/snapshots/test_noseyparker__scan__snippet_length__scan_changing_snippet_length-12.snap
---
source: crates/noseyparker-cli/tests/scan/snippet_length/mod.rs
expression: stdout
---
Finding 1/1: AWS API Key
Match: AKIADEADBEEFDEADBEEF

    Occurrence 1/1
    File:  <FILENAME>
    Blob:  <BLOB>
    Lines: 30:9-30:28

         data
        USERNAME=the_dude
        AWS_KEY=AKIADEADBEEFDEADBEEF

        function lorem(ipsum, dolor = 



