crates/noseyparker-cli/tests/scan/snippet_length/snapshots/test_noseyparker__scan__snippet_length__scan_changing_snippet_length-7.snap
---
source: crates/noseyparker-cli/tests/scan/snippet_length/mod.rs
expression: json_output
---
[
  {
    "match_content": "ghp_XIxB7KMNdAr3zqWtQqhE94qglHqOzn1D1stg",
    "matches": [
      {
        "blob_id": "96add51d102b68a8eb16cd104f6a79edc27bb61d",
        "blob_metadata": {
          "charset": null,
          "id": "96add51d102b68a8eb16cd104f6a79edc27bb61d",
          "mime_essence": "text/plain",
          "num_bytes": 1448
        },
        "capture_group_index": 1,
        "location": {
          "offset_span": {
            "end": 775,
            "start": 735
          },
          "source_span": {
            "end": {
              "column": 51,
              "line": 30
            },
            "start": {
              "column": 12,
              "line": 30
            }
          }
        },
        "match_content": "ghp_XIxB7KMNdAr3zqWtQqhE94qglHqOzn1D1stg",
        "provenance": [
          {
            "kind": "file",
            "path": "<ROOT>/input.txt"
          }
        ],
        "rule_name": "GitHub Personal Access Token",
        "snippet": {
          "after": "\n\nfunction lorem",
          "before": "dude\nGITHUB_KEY=",
          "matching": "ghp_XIxB7KMNdAr3zqWtQqhE94qglHqOzn1D1stg"
        }
      }
    ],
    "num_matches": 1,
    "rule_name": "GitHub Personal Access Token",
    "type": "finding"
  }
]
