crates/noseyparker-cli/tests/scan/snippet_length/snapshots/test_noseyparker__scan__snippet_length__scan_changing_snippet_length-9.snap
---
source: crates/noseyparker-cli/tests/scan/snippet_length/mod.rs
expression: stdout
---

 Rule          Distinct Matches   Total Matches 
────────────────────────────────────────────────
 AWS API Key                  1               1 

